# ncurses-test

./: meson.build
src/: app.cpp
